2006-02-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-prepare-article): Fix content
	start regexp for world.china group.

2006-02-12  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* shimbun/sb-x51.el (shimbun-x51-url): Remove it.
	(shimbun-x51-group-alist): Renew URL rule and add new groups.
	(shimbun-x51-content-start, shimbun-x51-content-end): Add `anima'
	rule.
	(shimbun-x51-concat-url): Renew generate rule.
	(shimbun-rss-build-message-id): Add `anima' id generate rule.
	(shimbun-get-headers): Fix casing type rdf,normal pages and
	obsolete groups.

2006-02-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Remove
	kansai.horiekenichi group;

	add groups book.booktimes, book.edu, culture.yurufemi, digital.av,
	edu.news, housing.soudan, international.america,
	international.asia, international.asiamachi, international.etc,
	international.europe, international.middleeast,
	international.seoul, international.shien, kansai.beichou,
	kansai.heibon, kansai.honma, kansai.kataritsugu, kansai.madam,
	kansai.otoriyose, kansai.sakana, kansai.sweets, world.china, and
	world.germany;

	fix index urls of culture.column and kansai.fuukei groups.

	(shimbun-asahi-prepare-article): Add special treatments for
	culture.yurufemi and world.china groups.

2006-02-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Fix a directory
	name in regexp of wakamiya group.
	(shimbun-index-url): Return a correct url for wakamiya group.

2006-02-05  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* shimbun/sb-x51.el (shimbun-x51-group-alist): Add new groups and
	remove obsolete groups.
	(shimbun-x51-obsolete-groups): New variable.
	(shimbun-groups): Modify supporting obsoleted groups.
	(shimbun-get-headers): Ditto.

2006-02-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-url-components-regexp): Move to w3m-util.el.
	(w3m-fontify-anchors, w3m-canonicalize-url, w3m-add-referer-p)